--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,9 +55,10 @@ jobs:
     - name: install Pillow
       run:
         python -m pip install pillow
+    # https://github.com/atsb/nose-py3/issues/2
     - name: install nose
       run: |
-        python -m pip install nose-py3
+        python -m pip install nose-py3==1.4.0
     - name: run tests
       run: |
         make test
