--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,13 @@ jobs:
           libxml2-utils
           libxslt1-dev
           xsltproc
+    - name: apt install OCR packages
+      run:
+        sudo apt-get install -y
+          tesseract-ocr
+          cuneiform
+          ocrad
+          gocr
     - name: update PIP
       run:
         python -m pip install --upgrade pip
