include coverage runs and prepare flake8 for CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,12 @@ jobs:
     - name: run tests
       run:
         make test
+    - name: determine coverage
+      run:
+        make update-coverage
+    #- name: run flake8
+      #run:
+        #python -m flake8 .
     - name: check docs
       run:
         make -C doc check
