improve code style

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,9 +62,9 @@ jobs:
     - name: determine coverage
       run:
         make update-coverage
-    #- name: run flake8
-      #run:
-        #python -m flake8 .
+    - name: run flake8
+      run:
+        python -m flake8 .
     - name: check docs
       run:
         make -C doc check
