--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: install wheel
       run:
-        python -m pip install --upgrade wheel
+        python -m pip install --upgrade wheel setuptools
     - name: install Cython
       run:
         python -m pip install cython
