--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
         python -m pip install --upgrade pip
     - name: install wheel
       run:
-        python -m pip install --upgrade wheel setuptools
+        python -m pip install --upgrade wheel
     - name: install Cython
       run:
         python -m pip install cython
@@ -75,7 +75,7 @@ jobs:
         tar -xvzf python-djvulibre.tar.gz
         cd python-djvulibre-python3/
         python -m pip install --upgrade packaging
-        python setup.py install
+        python -m pip install .
       if: ${{ matrix.djvulibre != 'legacy' }}
     - name: install package
       run:
