--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,14 @@ jobs:
     strategy:
       matrix:
         include:
-        # - python: 3.8
-        #   djvulibre: legacy
-        # - python: 3.9
-        #   djvulibre: legacy
-        # - python: '3.10'
-        #   djvulibre: legacy
-        # - python: '3.11'
-        #   djvulibre: legacy
+        - python: 3.8
+          djvulibre: legacy
+        - python: 3.9
+          djvulibre: legacy
+        - python: '3.10'
+          djvulibre: legacy
+        - python: '3.11'
+          djvulibre: legacy
         - python: 3.8
           djvulibre: latest
         - python: 3.9
@@ -63,14 +63,16 @@ jobs:
     - name: install wheel
       run:
         python -m pip install --upgrade wheel
-    - name: install Cython
-      run:
-        python -m pip install cython
-      if: ${{ matrix.djvulibre != 'legacy' }}
     # Cython 3.0 broke the old code.
-    - name: install Cython
+    - name: install djvulibre legacy
       run:
-        python -m pip install "cython<0.29.31"
+        python -m pip install "cython<3"
+        mkdir -p deps/
+        python -m pip download --dest deps --no-binary python-djvulibre --no-deps python-djvulibre
+        cd deps
+        tar -xvzf python-djvulibre*
+        cd python-djvulibre*
+        python setup.py install
       if: ${{ matrix.djvulibre == 'legacy' }}
     - name: install djuvlibre master
       run: |
