--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
         python -m pip download --dest deps --no-binary python-djvulibre --no-deps python-djvulibre
         cd deps
         tar -xvzf python-djvulibre*
-        cd python-djvulibre*
+        cd python-djvulibre-*
         python setup.py install
       if: ${{ matrix.djvulibre == 'legacy' }}
     - name: install djuvlibre master
