--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
         python -m pip download --dest deps --no-binary python-djvulibre --no-deps python-djvulibre
         cd deps
         mkdir -p python-djvulibre/
-        tar -xvzf python-djvulibre* --strip-components=1 -C python-djvulibre
+        tar -xvzf python-djvulibre-* --strip-components=1 -C python-djvulibre
         cd python-djvulibre
         python setup.py install
       if: ${{ matrix.djvulibre == 'legacy' }}
