--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
           djvulibre: latest
         - python: '3.11'
           djvulibre: latest
+        - python: '3.12-dev'
+          djvulibre: latest
     runs-on: ubuntu-latest
     name: Python ${{ matrix.python }} with djvulibre ${{ matrix.djvulibre }}
     steps:
@@ -61,9 +63,18 @@ jobs:
     - name: install wheel
       run:
         python -m pip install --upgrade wheel
-    - name: install Cython
-      run:
-        python -m pip install cython
+    # Cython 3.0 broke the old code.
+    - name: install djvulibre legacy
+      run: |
+        python -m pip install "cython<3"
+        mkdir -p deps/
+        python -m pip download --dest deps --no-binary python-djvulibre --no-deps python-djvulibre
+        cd deps
+        mkdir -p python-djvulibre/
+        tar -xvzf python-djvulibre-* --strip-components=1 -C python-djvulibre
+        cd python-djvulibre
+        python setup.py install
+      if: ${{ matrix.djvulibre == 'legacy' }}
     - name: install djuvlibre master
       run: |
         url="https://github.com/FriedrichFroebel/python-djvulibre/archive/python3.tar.gz"
@@ -72,8 +83,7 @@ jobs:
         cd deps
         tar -xvzf python-djvulibre.tar.gz
         cd python-djvulibre-python3/
-        python -m pip install --upgrade packaging
-        python setup.py install
+        python -m pip install .
       if: ${{ matrix.djvulibre != 'legacy' }}
     - name: install package
       run:
@@ -93,6 +103,7 @@ jobs:
     - name: run flake8
       run:
         python -m flake8 .
+      if: ${{ matrix.python != '3.12-dev' }}
     - name: check docs
       run:
         make -C doc check
