--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -104,6 +104,10 @@ jobs:
       run:
         python -m flake8 .
       if: ${{ matrix.python != '3.12-dev' }}
+    - name: run mypy
+      run: |
+        python -m pip install mypy
+        mypy ocrodjvu/ private/ tests/
     - name: check docs
       run:
         make -C doc check
