--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@
 # as soon as they get released by pinning them here and
 # letting `dependabot` update them for new releases.
 lxml==5.2.0
-PyICU=2.12 
+PyICU==2.12 
 html5lib==1.1
