--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
           djvulibre: latest
         - python: '3.12'
           djvulibre: latest
+        - python: '3.13-dev'
+          djvulibre: latest
     runs-on: ubuntu-latest
     name: Python ${{ matrix.python }} with djvulibre ${{ matrix.djvulibre }}
     steps:
@@ -57,6 +59,10 @@ jobs:
           cuneiform
           ocrad
           gocr
+    - name: apt install for lxml
+      run: |
+          sudo apt-get install libxml2-dev libxslt-dev
+      if: ${{ matrix.python == '3.13-dev' }}
     - name: update PIP
       run:
         python -m pip install --upgrade pip
