--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,14 @@ jobs:
     strategy:
       matrix:
         include:
-        - python: 3.8
           djvulibre: legacy
-        - python: 3.9
+        - python: '3.9'
           djvulibre: legacy
         - python: '3.10'
           djvulibre: legacy
         - python: '3.11'
           djvulibre: legacy
-        - python: 3.8
-          djvulibre: latest
-        - python: 3.9
+        - python: '3.9'
           djvulibre: latest
         - python: '3.10'
           djvulibre: latest
@@ -28,7 +25,7 @@ jobs:
           djvulibre: latest
         - python: '3.12'
           djvulibre: latest
-        - python: '3.13-dev'
+        - python: '3.13'
           djvulibre: latest
     runs-on: ubuntu-latest
     name: Python ${{ matrix.python }} with djvulibre ${{ matrix.djvulibre }}
